Fix spacing on index list.

--- a/src/css/item.css
+++ b/src/css/item.css
@@ -32,6 +32,8 @@
 #postDesc {
     position: relative;
     display: block}
+#postDesc a {
+    color: blue;}
 
     
 @media (min-aspect-ratio: 1/1) {
@@ -47,5 +49,8 @@
     #postDesc {
         display: inline-block;
         width: 50%;
-    }
+        padding-right: 5%;
+        box-sizing:border-box;
+        -moz-box-sizing:border-box; /* Firefox */
+        -webkit-box-sizing:border-box; /* Safari */}
 }
